<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.example.agustin.laboratorio09.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:text="Hora Maximo X: "
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvHoraMaxX"
        tools:ignore="HardcodedText" />

    <TextView
        android:text="@string/magnitud_maximo_x"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvMagnitudMaxX" />

    <TextView
        android:text="@string/hora_maximo_y"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvHoraMaxY" />

    <TextView
        android:text="@string/magnitud_maximo_y"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvMagnitudMaxY" />

    <TextView
        android:text="@string/hora_max_z"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvHoraMaxZ" />

    <TextView
        android:text="@string/magnitud_maximo_z"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvMagnitudMaxZ" />

</LinearLayout>
